Enable usage of LoopTools

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -13,6 +13,9 @@ FC         := @FC@
 GSLLIBS    := @GSLLIBS@
 GSLFLAGS   := @GSLFLAGS@
 LAPACKLIBS := @LAPACKLIBS@
+USE_LOOPTOOLS  := @USE_LOOPTOOLS@
+LOOPTOOLSFLAGS := @LOOPTOOLSFLAGS@
+LOOPTOOLSLIBS  := @LOOPTOOLSLIBS@
 MAKELIB    := @MAKELIB@
 LIBEXT     := @LIBEXT@
 VERSION    := @VERSION@
@@ -98,6 +101,9 @@ showbuild:
 	@echo "GSLLIBS    = $(GSLLIBS)"
 	@echo "GSLFLAGS   = $(GSLFLAGS)"
 	@echo "LAPACKLIBS = $(LAPACKLIBS)"
+	@echo "USE_LOOPTOOLS  = $(USE_LOOPTOOLS)"
+	@echo "LOOPTOOLSFLAGS = $(LOOPTOOLSFLAGS)"
+	@echo "LOOPTOOLSLIBS  = $(LOOPTOOLSLIBS)"
 	@echo "ALGORITHMS = $(ALGORITHMS)"
 	@echo "MATH       = $(MATH)"
 	@echo "MODELS     = $(MODELS)"
