--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -92,8 +92,12 @@ $(LIB@MODEL@_DEP) $(LIB@MODEL@_OBJ) $(DIR)/run_@MODEL@.o: CPPFLAGS += $(EIGENFLA
 $(LIB@MODEL@): $(LIB@MODEL@_OBJ)
 		$(MAKELIB) $@ $^
 
+ifeq ($(USE_LOOPTOOLS),yes)
+$(LIB@MODEL@_OBJ) $(LIB@MODEL@_DEP): CPPFLAGS += $(LOOPTOOLSFLAGS)
+endif
+
 $(RUN_@MODEL@_EXE): $(DIR)/run_@MODEL@.o $(LIB@MODEL@) $(LIBFLEXI) $(LIBLEGACY)
-		$(CXX) -o $@ $^ $(GSLLIBS) $(FLIBS)
+		$(CXX) -o $@ $^ $(GSLLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
 
 ALLDEP += $(LIB@MODEL@_DEP)
 ALLLIB += $(LIB@MODEL@)
