--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -23,6 +23,9 @@
 #include "logger.hpp"
 #include "error.hpp"
 #include "gsl_utils.hpp"
+#ifdef USE_LOOPTOOLS
+#include <clooptools.h>
+#endif
 
 #include <cmath>
 #include <iostream>
@@ -261,17 +264,32 @@ double @ModelName@::A0(double m) const
 
 double @ModelName@::B0(double p, double m1, double m2) const
 {
+#ifdef USE_LOOPTOOLS
+   setmudim(Sqr(get_scale()));
+   return Re(::B0(p*p, m1*m1, m2*m2));
+#else
    return b0(p, m1, m2, get_scale());
+#endif
 }
 
 double @ModelName@::B1(double p, double m1, double m2) const
 {
+#ifdef USE_LOOPTOOLS
+   setmudim(Sqr(get_scale()));
+   return Re(::B1(p*p, m1*m1, m2*m2));
+#else
    return -b1(p, m1, m2, get_scale());
+#endif
 }
 
 double @ModelName@::B00(double p, double m1, double m2) const
 {
+#ifdef USE_LOOPTOOLS
+   setmudim(Sqr(get_scale()));
+   return Re(::B00(p*p, m1*m1, m2*m2));
+#else
    return b22(p, m1, m2, get_scale());
+#endif
 }
 
 double @ModelName@::B22(double p, double m1, double m2) const
