--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -86,11 +86,15 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
    const double MW = Electroweak_constants::MW;
    const double MZ2 = Sqr(MZ);
    const double MW2 = Sqr(MW);
+   const double cW2 = MW2/MZ2;
+   const double sW2 = 1.0 - cW2;
+   const double sW  = Sqrt(sW2);
 
    const double self_energy_Z = Re(model->self_energy_@VectorZ@_heavy(MZ));
    const double self_energy_W = Re(model->self_energy_@VectorW@_heavy(MW));
-   const double sinThetaW_drbar = SM(sinThetaW)
-      - (MW2/MZ2) * 0.5 * (self_energy_W / MW2 - self_energy_Z / MZ2);
+   const double delta_sW2 = - cW2 * (self_energy_W / MW2 - self_energy_Z / MZ2);
+   const double delta_sW  = 0.5 * delta_sW2 / sW;
+   const double sinThetaW_drbar = SM(sinThetaW) + delta_sW;
 
 @setDRbarGaugeCouplings@
 }
