Rename preprocessor looptools flag to avoid conflicts with USE_LOOPTOOLS used in Softsusy

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -13,7 +13,7 @@ FC         := @FC@
 GSLLIBS    := @GSLLIBS@
 GSLFLAGS   := @GSLFLAGS@
 LAPACKLIBS := @LAPACKLIBS@
-USE_LOOPTOOLS  := @USE_LOOPTOOLS@
+ENABLE_LOOPTOOLS := @ENABLE_LOOPTOOLS@
 LOOPTOOLSFLAGS := @LOOPTOOLSFLAGS@
 LOOPTOOLSLIBS  := @LOOPTOOLSLIBS@
 MAKELIB    := @MAKELIB@
@@ -101,7 +101,7 @@ showbuild:
 	@echo "GSLLIBS    = $(GSLLIBS)"
 	@echo "GSLFLAGS   = $(GSLFLAGS)"
 	@echo "LAPACKLIBS = $(LAPACKLIBS)"
-	@echo "USE_LOOPTOOLS  = $(USE_LOOPTOOLS)"
+	@echo "ENABLE_LOOPTOOLS = $(ENABLE_LOOPTOOLS)"
 	@echo "LOOPTOOLSFLAGS = $(LOOPTOOLSFLAGS)"
 	@echo "LOOPTOOLSLIBS  = $(LOOPTOOLSLIBS)"
 	@echo "ALGORITHMS = $(ALGORITHMS)"
