--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -92,7 +92,7 @@ $(LIB@MODEL@_DEP) $(LIB@MODEL@_OBJ) $(DIR)/run_@MODEL@.o: CPPFLAGS += $(EIGENFLA
 $(LIB@MODEL@): $(LIB@MODEL@_OBJ)
 		$(MAKELIB) $@ $^
 
-ifeq ($(USE_LOOPTOOLS),yes)
+ifeq ($(ENABLE_LOOPTOOLS),yes)
 $(LIB@MODEL@_OBJ) $(LIB@MODEL@_DEP): CPPFLAGS += $(LOOPTOOLSFLAGS)
 endif
 
