--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -23,7 +23,7 @@
 #include "logger.hpp"
 #include "error.hpp"
 #include "gsl_utils.hpp"
-#ifdef USE_LOOPTOOLS
+#ifdef ENABLE_LOOPTOOLS
 #include <clooptools.h>
 #endif
 
@@ -264,7 +264,7 @@ double @ModelName@::A0(double m) const
 
 double @ModelName@::B0(double p, double m1, double m2) const
 {
-#ifdef USE_LOOPTOOLS
+#ifdef ENABLE_LOOPTOOLS
    setmudim(Sqr(get_scale()));
    return Re(::B0(p*p, m1*m1, m2*m2));
 #else
@@ -274,7 +274,7 @@ double @ModelName@::B0(double p, double m1, double m2) const
 
 double @ModelName@::B1(double p, double m1, double m2) const
 {
-#ifdef USE_LOOPTOOLS
+#ifdef ENABLE_LOOPTOOLS
    setmudim(Sqr(get_scale()));
    return Re(::B1(p*p, m1*m1, m2*m2));
 #else
@@ -284,7 +284,7 @@ double @ModelName@::B1(double p, double m1, double m2) const
 
 double @ModelName@::B00(double p, double m1, double m2) const
 {
-#ifdef USE_LOOPTOOLS
+#ifdef ENABLE_LOOPTOOLS
    setmudim(Sqr(get_scale()));
    return Re(::B00(p*p, m1*m1, m2*m2));
 #else
