--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -94,7 +94,16 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
    const double self_energy_W = Re(model->self_energy_@VectorW@_heavy(MW));
    const double delta_sW2 = - cW2 * (self_energy_W / MW2 - self_energy_Z / MZ2);
    const double delta_sW  = 0.5 * delta_sW2 / sW;
-   const double sinThetaW_drbar = SM(sinThetaW) + delta_sW;
+   double sinThetaW_drbar = SM(sinThetaW) + delta_sW;
+
+   if (Abs(sinThetaW_drbar) >= 0.99) {
+#ifdef VERBOSE
+      WARNING("@ModelName@_low_scale_constraint: loop corrections to"
+              " sinThetaW are non-perturbative, resetting sinThetaW to"
+              " the Standard Model value");
+#endif
+      sinThetaW_drbar = SM(sinThetaW);
+   }
 
 @setDRbarGaugeCouplings@
 }
