--- a/templates/low_scale_constraint.hpp.in
+++ b/templates/low_scale_constraint.hpp.in
@@ -41,6 +41,8 @@ private:
 
    void calculate_DRbar_gauge_couplings();
    void calculate_DRbar_yukawa_couplings();
+   double calculate_delta_alpha_em(double) const;
+   double calculate_delta_alpha_s(double) const;
    void update_scale();
 };
 
