--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -37,6 +37,12 @@
    : Constraint<Two_scale>()
    , model(0)
    , inputPars(inputPars_)
+   , new_g1(0.)
+   , new_g2(0.)
+   , new_g3(0.)
+   , new_Yu(Eigen::Matrix<double,3,3>::Zero())
+   , new_Yd(Eigen::Matrix<double,3,3>::Zero())
+   , new_Ye(Eigen::Matrix<double,3,3>::Zero())
 {
 @scaleGuess@
 }
@@ -62,6 +68,14 @@ void @ModelName@_low_scale_constraint::apply()
       = model->calculate_M@VectorW@_DRbar_1loop(Electroweak_constants::MW);
 
 @applyConstraint@
+
+   model->set_@hyperchargeCoupling@(new_g1);
+   model->set_@leftCoupling@(new_g2);
+   model->set_@strongCoupling@(new_g3);
+
+   model->set_@UpYukawa@(new_Yu);
+   model->set_@DownYukawa@(new_Yd);
+   model->set_@ElectronYukawa@(new_Ye);
 }
 
 double @ModelName@_low_scale_constraint::get_scale() const
@@ -117,9 +131,9 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
    const double g1_inv_gut_normalization = @hyperchargeCouplingInverseGutNormalization@;
    const double g2_inv_gut_normalization = @leftCouplingInverseGutNormalization@;
 
-   model->set_@hyperchargeCoupling@(e_drbar * g1_inv_gut_normalization / cosThetaW_drbar);
-   model->set_@leftCoupling@(e_drbar * g2_inv_gut_normalization / sinThetaW_drbar);
-   model->set_@strongCoupling@(g3_drbar);
+   new_g1 = e_drbar * g1_inv_gut_normalization / cosThetaW_drbar;
+   new_g2 = e_drbar * g2_inv_gut_normalization / sinThetaW_drbar;
+   new_g3 = g3_drbar;
 }
 
 double @ModelName@_low_scale_constraint::calculate_delta_alpha_em(double alphaEm) const
