--- a/templates/low_scale_constraint.hpp.in
+++ b/templates/low_scale_constraint.hpp.in
@@ -23,6 +23,7 @@
 
 #include "@ModelName@_input_parameters.hpp"
 #include "two_scale_constraint.hpp"
+#include <Eigen/Core>
 
 class @ModelName@;
 
@@ -38,6 +39,8 @@ private:
    double scale;
    @ModelName@* model;
    @ModelName@_input_parameters inputPars;
+   double new_g1, new_g2, new_g3;
+   Eigen::Matrix<double,3,3> new_Yu, new_Yd, new_Ye;
 
    void calculate_DRbar_gauge_couplings();
    void calculate_DRbar_yukawa_couplings();
