Ouput the spectrum at MZ.  (But the calculation of the spectrum takes place at Msusy.)

--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -70,6 +70,7 @@ int main()
       solver.solve();
       model.run_to(susy_scale_input.get_scale());
       model.calculate_spectrum();
+      model.run_to(Electroweak_constants::MZ);
       model.print(std::cout);
    } catch (Error& error) {
       cout << "Error: " << error.what() << endl;
