--- a/templates/NMSSM/FlexibleSUSY.m.in
+++ b/templates/NMSSM/FlexibleSUSY.m.in
@@ -47,8 +47,8 @@ BoundarySUSYScale = {
 BoundaryLowScale = MZ;
 
 BoundaryLowScaleInput={
-   {vd, 2 MZDRbar / Sqrt[(3/5 g1^2 + g2^2)] Cos[ArcTan[TanBeta]]},
-   {vu, 2 MZDRbar / Sqrt[(3/5 g1^2 + g2^2)] Sin[ArcTan[TanBeta]]}
+   {vd, 2 MZDRbar / Sqrt[(GUTNormalization[g1]^2 g1^2 + g2^2)] Cos[ArcTan[TanBeta]]},
+   {vu, 2 MZDRbar / Sqrt[(GUTNormalization[g1]^2 g1^2 + g2^2)] Sin[ArcTan[TanBeta]]}
 };
 
 InitialGuess = {
