--- a/templates/initial_guesser.cpp.in
+++ b/templates/initial_guesser.cpp.in
@@ -34,9 +34,9 @@
 @ModelName@_initial_guesser::@ModelName@_initial_guesser(
    @ModelName@* model_,
    const @ModelName@_input_parameters& input_pars_,
-   @ModelName@_low_scale_constraint& low_constraint_,
-   @ModelName@_susy_scale_constraint& susy_constraint_,
-   @ModelName@_high_scale_constraint& high_constraint_
+   const @ModelName@_low_scale_constraint& low_constraint_,
+   const @ModelName@_susy_scale_constraint& susy_constraint_,
+   const @ModelName@_high_scale_constraint& high_constraint_
 )
    : Initial_guesser<Two_scale>()
    , model(model_)
