--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -48,9 +48,11 @@ public:
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
    const @ModelName@_input_parameters& get_input() const;
-   int solve_ewsb();
-   int solve_ewsb(unsigned);
-   int solve_ewsb_with(const gsl_multiroot_fsolver_type*, const double*);
+   int solve_ewsb_iteratively();
+   int solve_ewsb_iteratively(unsigned);
+   int solve_ewsb_iteratively_with(const gsl_multiroot_fsolver_type*, const double*);
+   int solve_ewsb_tree_level();
+   int solve_ewsb_one_loop();
    void ewsb_initial_guess(double*);
    void print_state(std::size_t, gsl_multiroot_fsolver*) const;
 
