--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -56,7 +56,7 @@ void @ModelName@_low_scale_constraint::apply()
    assert(model && "Error: @ModelName@_low_scale_constraint:"
           " model pointer must not be zero");
 
-   model->solve_ewsb(0);
+   model->solve_ewsb_tree_level();
    model->calculate_DRbar_parameters();
    update_scale();
    calculate_DRbar_gauge_couplings();
