--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -50,10 +50,10 @@ public:
    const @ModelName@_input_parameters& get_input() const;
    int solve_ewsb_iteratively();
    int solve_ewsb_iteratively(unsigned);
-   int solve_ewsb_iteratively_with(const gsl_multiroot_fsolver_type*, const double*);
+   int solve_ewsb_iteratively_with(const gsl_multiroot_fsolver_type*, const double[@numberOfEWSBEquations@]);
    int solve_ewsb_tree_level();
    int solve_ewsb_one_loop();
-   void ewsb_initial_guess(double*);
+   void ewsb_initial_guess(double[@numberOfEWSBEquations@]);
    void print_state(std::size_t, gsl_multiroot_fsolver*) const;
 
    // interface functions
