--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -69,11 +69,6 @@ void @ModelName@::set_number_of_mass_iterations(std::size_t iterations)
    number_of_mass_iterations = iterations;
 }
 
-void @ModelName@::set_ewsb_loop_order(unsigned loop_order)
-{
-   ewsb_loop_order = loop_order;
-}
-
 void @ModelName@::set_ewsb_iteration_precision(double precision)
 {
    ewsb_iteration_precision = precision;
@@ -117,7 +112,9 @@ int tadpole_equations(const gsl_vector* x, void* params, gsl_vector* f)
    double tadpole[@numberOfEWSBEquations@];
 
 @calculateTreeLevelTadpoles@
+   if (model->get_ewsb_loop_order() > 0) {
 @calculateOneLoopTadpoles@
+   }
 
    for (std::size_t i = 0; i < @numberOfEWSBEquations@; ++i)
       gsl_vector_set(f, i, tadpole[i]);
@@ -175,9 +172,9 @@ int @ModelName@::solve_ewsb_iteratively()
 int @ModelName@::solve_ewsb_iteratively(unsigned loop_order)
 {
    const unsigned old_loop_order = ewsb_loop_order;
-   set_ewsb_loop_order(loop_order);
+   ewsb_loop_order = loop_order;
    const int error_code = solve_ewsb_iteratively();
-   set_ewsb_loop_order(old_loop_order);
+   ewsb_loop_order = old_loop_order;
    return error_code;
 }
 
