--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -171,11 +171,8 @@ int @ModelName@::solve_ewsb_iteratively()
 
 int @ModelName@::solve_ewsb_iteratively(unsigned loop_order)
 {
-   const unsigned old_loop_order = ewsb_loop_order;
    ewsb_loop_order = loop_order;
-   const int error_code = solve_ewsb_iteratively();
-   ewsb_loop_order = old_loop_order;
-   return error_code;
+   return solve_ewsb_iteratively();
 }
 
 int @ModelName@::solve_ewsb_tree_level()
