--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -43,7 +43,6 @@ public:
    void set_mass_iteration_precision(double);
    void set_number_of_ewsb_iterations(std::size_t);
    void set_number_of_mass_iterations(std::size_t);
-   unsigned get_ewsb_loop_order() const;
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
    const @ModelName@_input_parameters& get_input() const;
@@ -66,6 +65,11 @@ public:
 @loopMassesPrototypes@
 @runningDRbarMassesPrototypes@
 @dependenceNumPrototypes@
+
+   struct Ewsb_parameters {
+      @ModelName@* model;
+      unsigned ewsb_loop_order;
+   };
 
 private:
    std::size_t number_of_ewsb_iterations;
