If a simple solution to the EWSB eqs. exists, use this one. This avoids a GSL iteration to find the root of the EWSB eqs. However, it seems that we do not really gain any speed at the end.

--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -36,6 +36,7 @@
 
 #define PHYSICAL(parameter) physical.parameter
 #define INPUT(parameter) model->get_input().parameter
+#define LOCALINPUT(parameter) input.parameter
 
 @ModelName@::@ModelName@(const @ModelName@_input_parameters& input_)
    : Two_scale_model()
@@ -175,7 +176,11 @@ int @ModelName@::solve_ewsb_iteratively(unsigned loop_order)
 
 int @ModelName@::solve_ewsb_tree_level()
 {
+   int error = 0;
+
 @solveEwsbTreeLevel@
+
+   return error;
 }
 
 int @ModelName@::solve_ewsb_one_loop()
