--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -46,6 +46,7 @@ public:
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
    const @ModelName@_input_parameters& get_input() const;
+   void set_input(const @ModelName@_input_parameters&);
    int solve_ewsb_tree_level();
    int solve_ewsb_one_loop();
    void print_state(std::size_t, gsl_multiroot_fsolver*) const;
