--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -25,6 +25,7 @@
 #include "@ModelName@_low_scale_constraint.hpp"
 #include "@ModelName@_convergence_tester.hpp"
 #include "@ModelName@_initial_guesser.hpp"
+#include "@ModelName@_utilities.hpp"
 
 #include "two_scale_running_precision.hpp"
 #include "two_scale_solver.hpp"
@@ -83,18 +84,8 @@ int main()
    const double MZ = Electroweak_constants::MZ;
    model.run_to(MZ);
 
-   class Parameter_getter {
-   public:
-      Eigen::ArrayXd operator()(const @ModelName@& rge) {
-         return rge.display();
-      }
-      std::vector<std::string> get_parameter_names(const @ModelName@& rge) const {
-         return rge.get_parameter_names();
-      }
-   };
-
-   Parameter_getter parameter_getter;
-   Coupling_monitor<@ModelName@, Parameter_getter> coupling_monitor(model, parameter_getter);
+   @ModelName@_parameter_getter parameter_getter;
+   Coupling_monitor<@ModelName@, @ModelName@_parameter_getter> coupling_monitor(model, parameter_getter);
 
    coupling_monitor.run(MZ, gut_scale, 100, true);
    coupling_monitor.write_to_file("@ModelName@_rge_running.dat");
