--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -51,7 +51,7 @@ public:
 private:
    typedef std::pair<std::string, Eigen::ArrayXd> TParticle;
    typedef std::vector<TParticle> TSpectrum;
-   TSpectrum spectrum_tree, spectrum_one_loop;
+   TSpectrum spectrum;
    double scale;
    unsigned width;
 
