--- a/templates/high_scale_constraint.cpp.in
+++ b/templates/high_scale_constraint.cpp.in
@@ -39,6 +39,7 @@
    , inputPars(inputPars_)
 {
 @scaleGuess@
+   initial_scale_guess = scale;
 }
 
 @ModelName@_high_scale_constraint::~@ModelName@_high_scale_constraint()
@@ -58,6 +59,11 @@ void @ModelName@_high_scale_constraint::apply()
 double @ModelName@_high_scale_constraint::get_scale() const
 {
    return scale;
+}
+
+double @ModelName@_high_scale_constraint::get_initial_scale_guess() const
+{
+   return initial_scale_guess;
 }
 
 void @ModelName@_high_scale_constraint::set_model(Two_scale_model* model_)
