--- a/templates/susy_scale_constraint.cpp.in
+++ b/templates/susy_scale_constraint.cpp.in
@@ -37,6 +37,7 @@
    , inputPars(inputPars_)
 {
 @scaleGuess@
+   initial_scale_guess = scale;
 }
 
 @ModelName@_susy_scale_constraint::~@ModelName@_susy_scale_constraint()
@@ -58,6 +59,11 @@ void @ModelName@_susy_scale_constraint::apply()
 double @ModelName@_susy_scale_constraint::get_scale() const
 {
    return scale;
+}
+
+double @ModelName@_susy_scale_constraint::get_initial_scale_guess() const
+{
+   return initial_scale_guess;
 }
 
 void @ModelName@_susy_scale_constraint::set_model(Two_scale_model* model_)
