--- a/templates/susy_scale_constraint.cpp.in
+++ b/templates/susy_scale_constraint.cpp.in
@@ -37,7 +37,7 @@
    , inputPars(inputPars_)
 {
 @scaleGuess@
-   initial_scale_guess = scale;
+   scale = initial_scale_guess;
 }
 
 @ModelName@_susy_scale_constraint::~@ModelName@_susy_scale_constraint()
