Simplification: set the scale back to the initial guess in case an error has occured.  Also set errno back to zero to continue the program properly.

--- a/templates/high_scale_constraint.cpp.in
+++ b/templates/high_scale_constraint.cpp.in
@@ -79,7 +79,9 @@ void @ModelName@_high_scale_constraint::update_scale()
 @calculateScale@
 
    if (errno == ERANGE) {
-      ERROR("Overflow error during calculation of high scale: " << strerror(errno));
-   @scaleGuess@
+      ERROR("@ModelName@_high_scale_constraint: Overflow error during"
+            " calculation of high scale: " << strerror(errno));
+      scale = get_initial_scale_guess();
+      errno = 0;
    }
 }
