Add a helper namespace which contains the particle names (and LaTeX names).  In the MSSM they can now be used like this:
   for (int i = 0; i < MSSM_info::NUMBER_OF_PARTICLES; i++)
      cout << "particle " << MSSM_info::particle_names[i] << endl;

--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -28,6 +28,11 @@
 
 #define PHYSICAL(p) model.get_physical().p
 
+namespace @ModelName@_info {
+@particleNames@
+@particleLaTeXNames@
+}
+
 @ModelName@_spectrum_plotter::@ModelName@_spectrum_plotter()
    : spectrum()
    , scale(0.0)
